add ordered list to Projects section

--- a/index.html
+++ b/index.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css/styles.css" type="text/css">
+    <title>Dan's Portfolio</title>
   </head>
   <body>
+    <div>
+    <header class="jumbotron">
+      The Life + Times of Dan Jacob
+    </header>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <h3><strong>About Me</strong></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+        </div>
+        <div class="col-md-3">
+          <h3><em>Background</em></h3>
+            <p><span>I have a background in writing and business</span></p>
+        </div>
+        <div class="col-md-3">
+          <h3>Projects</h3>
+          <p>Below I have compiled a few projects I have worked on</p>
+          <ol>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+
+          </ol>
+
+        </div>
+
+      </div>
+
+    </div>
 
   </body>
 </html>
