Added image to header

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <div>
     <header class="jumbotron">
+      <span>
+      <img src="img/philly.jpg" alt="hometown">
       The Life + Times of Dan Jacob
+      </span>
     </header>
     </div>
     <div class="container">
@@ -22,15 +25,23 @@
             <p><span>I have a background in writing and business</span></p>
         </div>
         <div class="col-md-3">
-          <h3>Projects</h3>
+          <h3><em>Projects</em></h3>
           <p>Below I have compiled a few projects I have worked on</p>
           <ol>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-
+            <li><a href="https://github.com/DanJacobCodes/my-first-webpage">My First Webpage!</a></li>
+            <li><a href="https://github.com/DanJacobCodes/france">France</a></li>
+            <li><a href="https://github.com/DanJacobCodes/animal-shelter">Animal Shelter</a></li>
+            <li><a href="https://github.com/DanJacobCodes/cupcake-shop">Cupcake Shop</a></li>
           </ol>
+        </div>
+        <div class="col-md-3">
+          <h3><em>Interests</em></h3>
+          <ul>
+            <li>Writing</li>
+            <li>Sports</li>
+            <li>Reading</li>
+            <li>Social Reform</li>
+          </ul>
 
         </div>
 
