add CSS styling to center text from header

--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <div>
-    <header class="jumbotron">
-      <span>
-      <img src="img/philly.jpg" alt="hometown">
+    <header class="jumbotron" id="header">
+        <img src="img/philly.jpg" alt="hometown">
       The Life + Times of Dan Jacob
-      </span>
     </header>
     </div>
     <div class="container">
