add an image to About Me section

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <body>
     <div>
     <header class="jumbotron" id="header">
-        <img src="img/philly.jpg" alt="hometown">
-      The Life + Times of Dan Jacob
+    The Life + Times of Dan Jacob
     </header>
     </div>
     <div class="container">
@@ -17,6 +16,7 @@
         <div class="col-md-3">
           <h3><strong>About Me</strong></h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+          <img src="img/home.jpeg" alt="hometown">
         </div>
         <div class="col-md-3">
           <h3><em>Background</em></h3>
