--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="row">
         <div class="col-md-3">
           <h3><strong>About Me</strong></h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris </p>
+            <p>My name is Dan Jacob as you can tell by the giant header. I was born and raised in Philadelphia. I studied Business Administration while in college. I've recently interned as an editorial writer before relocating to Seattle to attend Epicodus! In my downtime, I enjoy listening to music (hip-hop), reading, writing, learning about design, tech, and business. I'm a huge sports fan, my favorite teams being the Philadelphia Eagles, and the Los Angeles Lakers! </p>
           <img src="img/home.jpeg" alt="hometown">
         </div>
         <div class="col-md-3">
