import font style from Google and apply it to header

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
     <title>Dan's Portfolio</title>
   </head>
   <body>
@@ -15,8 +16,10 @@
       <div class="row">
         <div class="col-md-3">
           <h3><strong>About Me</strong></h3>
+          <span>
             <p>My name is Dan Jacob as you can tell by the giant header. I was born and raised in Philadelphia. I studied Business Administration while in college. I've recently interned as an editorial writer before relocating to Seattle to attend Epicodus! In my downtime, I enjoy listening to music (hip-hop), reading, writing, learning about design, tech, and business. I'm a huge sports fan, my favorite teams being the Philadelphia Eagles, and the Los Angeles Lakers! </p>
           <img src="img/home.jpeg" alt="hometown">
+          </span>
         </div>
         <div class="col-md-3">
           <h3><em>Background</em></h3>
