add info to Background section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="col-md-3">
           <h3><em>Background</em></h3>
-            <p><span>I have a background in writing and business</span></p>
+            <p><span>During my time in college I studied Business Administration. I attended a startup bootcamp in Philadelphia as well to further my skills on the principles of launching a startup. In addition to my Business background, I've also been a life-long lover of writing, this January I interned as an Editorial Writer to create content that helped local students utilize resources in the city of Philadelphia. </span></p>
         </div>
         <div class="col-md-3">
           <h3><em>Projects</em></h3>
@@ -42,6 +42,7 @@
             <li>Sports</li>
             <li>Reading</li>
             <li>Social Reform</li>
+            <li>Music</li>
           </ul>
 
         </div>
