add a picture of me to header

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <div>
     <header class="jumbotron" id="header">
+      <img src="img/git.jpeg" alt="pic of me">
     The Life + Times of Dan Jacob
     </header>
     </div>
