add class to all p elements

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <h3><strong>About Me</strong></h3>
+          <h3 ><strong>About Me</strong></h3>
           <span>
-            <p>My name is Dan Jacob as you can tell by the giant header. I was born and raised in Philadelphia. I studied Business Administration while in college. I've recently interned as an editorial writer before relocating to Seattle to attend Epicodus! In my downtime, I enjoy listening to music (hip-hop), reading, writing, learning about design, tech, and business. I'm a huge sports fan, my favorite teams being the Philadelphia Eagles, and the Los Angeles Lakers! </p>
+            <p class="port">My name is Dan Jacob as you can tell by the giant header. I was born and raised in Philadelphia. I studied Business Administration while in college. I've recently interned as an editorial writer before relocating to Seattle to attend Epicodus! In my downtime, I enjoy listening to music (hip-hop), reading, writing, learning about design, tech, and business. I'm a huge sports fan, my favorite teams being the Philadelphia Eagles, and the Los Angeles Lakers! </p>
           <img src="img/home.jpeg" alt="hometown">
           </span>
         </div>
         <div class="col-md-3">
           <h3><em>Background</em></h3>
-            <p><span>During my time in college I studied Business Administration. I attended a startup bootcamp in Philadelphia as well to further my skills on the principles of launching a startup. In addition to my Business background, I've also been a life-long lover of writing, this January I interned as an Editorial Writer to create content that helped local students utilize resources in the city of Philadelphia. </span></p>
+            <p class="port"><span>During my time in college I studied Business Administration. I attended a startup bootcamp in Philadelphia as well to further my skills on the principles of launching a startup. In addition to my Business background, I've also been a life-long lover of writing, this January I interned as an Editorial Writer to create content that helped local students utilize resources in the city of Philadelphia. </span></p>
         </div>
         <div class="col-md-3">
           <h3><em>Projects</em></h3>
-          <p>Below I have compiled a few projects I have worked on</p>
+          <p class="port">Below I have compiled a few projects I have worked on</p>
           <ol>
             <li><a href="https://github.com/DanJacobCodes/my-first-webpage">My First Webpage!</a></li>
             <li><a href="https://github.com/DanJacobCodes/france">France</a></li>
