--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
           </span>
         </div>
         <div class="col-md-3">
-          <h3><em>Background</em></h3>
+          <h3 class="font"><em>Background</em></h3>
             <p class="port"><span>During my time in college I studied Business Administration. I attended a startup bootcamp in Philadelphia as well to further my skills on the principles of launching a startup. In addition to my Business background, I've also been a life-long lover of writing, this January I interned as an Editorial Writer to create content that helped local students utilize resources in the city of Philadelphia. </span></p>
         </div>
         <div class="col-md-3">
-          <h3><em>Projects</em></h3>
+          <h3 class="font"><em>Projects</em></h3>
           <p class="port">Below I have compiled a few projects I have worked on</p>
           <ol>
             <li><a href="https://github.com/DanJacobCodes/my-first-webpage">My First Webpage!</a></li>
@@ -38,7 +38,7 @@
           </ol>
         </div>
         <div class="col-md-3">
-          <h3><em>Interests</em></h3>
+          <h3 class="font"><em>Interests</em></h3>
           <ul>
             <li>Writing</li>
             <li>Sports</li>
